--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <div class="person">
                 <div class="profile">
                     <img src="assets/img/sayyar.png" alt="">
-                    <p>Had taken consultation regarding purchase of property in islamabad for my relatives, thanks to team @al-akhtarMarketing for making it that simple. Highly recommended..!
+                    <p>"The wise young man or wage earner of today invests his money in real estate."
                         <br> <br> <br> <br> Sayyar Ali khan
                     </p>
                 </div>
